[gd_scene load_steps=3 format=2]

[ext_resource path="res://ExampleUsage/UsingAudioManager/UsingAudioManager.gd" type="Script" id=1]
[ext_resource path="res://Lib/Audio/Bgm/Grass & Rock [Capcom Style - 2A03] - Track 01 (Grassland).ogg" type="AudioStream" id=2]

[node name="Node" type="Node"]
script = ExtResource( 1 )
background_music = ExtResource( 2 )

[node name="Explainations" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="Explainations"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="Explainations/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 784.0
margin_bottom = 584.0
custom_constants/separation = 24

[node name="Label7" type="Label" parent="Explainations/MarginContainer/VBoxContainer"]
margin_right = 768.0
margin_bottom = 82.0
text = "  User_AudioManager information:
AudioManager is a singleton audio player that plays background music and sound effects. The main advantage is to provide an easier way to play audio from anywhere without having to attach sound effect to a node. Ex: An enemy carrying sound effect that plays when dies. That would become frustrated to handle by keeping enemy stay alive until the sound finishes playing to prevent sound effect getting killed."
autowrap = true

[node name="Label" type="Label" parent="Explainations/MarginContainer/VBoxContainer"]
margin_top = 106.0
margin_right = 768.0
margin_bottom = 120.0
text = "In this example, Background music is played from root node's export variable when below button is pressed."
autowrap = true

[node name="PlayBgmButton" type="Button" parent="Explainations/MarginContainer/VBoxContainer"]
margin_top = 144.0
margin_right = 768.0
margin_bottom = 164.0
text = "User_AudioManager.play_bgm()"
align = 0

[node name="Label3" type="Label" parent="Explainations/MarginContainer/VBoxContainer"]
margin_top = 188.0
margin_right = 768.0
margin_bottom = 219.0
text = "When pressed, background music will play. After a few clicks, you'll notice the bgm won't reset. This is useful if you want the current music keeps playing while switching to another scene, etc."
autowrap = true

[node name="Label4" type="Label" parent="Explainations/MarginContainer/VBoxContainer"]
margin_top = 243.0
margin_right = 768.0
margin_bottom = 257.0
text = "To stop current bgm, click the below button."
autowrap = true

[node name="StopBgmButton2" type="Button" parent="Explainations/MarginContainer/VBoxContainer"]
margin_top = 281.0
margin_right = 768.0
margin_bottom = 301.0
text = "User_AudioManager.stop_bgm()"
align = 0

[node name="HSeparator" type="HSeparator" parent="Explainations/MarginContainer/VBoxContainer"]
margin_top = 325.0
margin_right = 768.0
margin_bottom = 329.0

[node name="Label5" type="Label" parent="Explainations/MarginContainer/VBoxContainer"]
margin_top = 353.0
margin_right = 768.0
margin_bottom = 367.0
text = "Below, the sound effect will play when the button is pressed."
autowrap = true

[node name="PlaySfxButton" type="Button" parent="Explainations/MarginContainer/VBoxContainer"]
margin_top = 391.0
margin_right = 768.0
margin_bottom = 411.0
text = "User_AudioManager.sfx_example.play()"
align = 0

[node name="Label6" type="Label" parent="Explainations/MarginContainer/VBoxContainer"]
margin_top = 435.0
margin_right = 768.0
margin_bottom = 449.0
text = "Further information is provided in the script of AudioManager located in the file: res://Lib/Audio/AudioManager.gd"
autowrap = true

[node name="Label8" type="Label" parent="Explainations/MarginContainer/VBoxContainer"]
margin_top = 473.0
margin_right = 768.0
margin_bottom = 487.0
text = "Example use is in the root node's script."
autowrap = true
[connection signal="pressed" from="Explainations/MarginContainer/VBoxContainer/PlayBgmButton" to="." method="_on_PlayBgmButton_pressed"]
[connection signal="pressed" from="Explainations/MarginContainer/VBoxContainer/StopBgmButton2" to="." method="_on_StopBgmButton2_pressed"]
[connection signal="pressed" from="Explainations/MarginContainer/VBoxContainer/PlaySfxButton" to="." method="_on_PlaySfxButton_pressed"]
